Other changes, Mobile Responsive

--- a/src/Landing_page.html
+++ b/src/Landing_page.html
@@ -49,7 +49,7 @@
                 Join Quizzical Hub and start showcasing your skills.
             </p>
             <div class="mt-[2rem] mb-[1rem]">
-                <a href="" class="mr-[1rem] text-white bg-black p-[15px] font-semibold text-[1.20rem] rounded-[10px] items-center transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
+                <a href="Login_page.html" class="mr-[1rem] text-white bg-black p-[15px] font-semibold text-[1.20rem] rounded-[10px] items-center transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
                     <input type="button" value="Get Started" class="">
                     <i class="fa-solid fa-angle-right text-[1.20rem] ml-5 arrow-transition"></i></a>
                 <a href="#Howitworks" class="border-[2px] p-[15px] font-semibold text-[1.20rem] rounded-[10px] transition-all ease-in-[0.5s] hover:rounded-tr-[20px] hover:rounded-bl-[20px] active:opacity-70">
