--- a/src/Login_page.html
+++ b/src/Login_page.html
@@ -18,7 +18,7 @@
                 <i class="fa-solid fa-house mx-1 w-5 mt-1 text-center flex-shrink-0 max-[420px]:hidden"></i>
                 <a href="./Landing_page.html" class="text-white transition-all ease-in-[0.5s] hover:text-[#FEE715] max-[420px]:hidden">Home</a>
             </li>
-            <a href="./Login_page.html">
+            <a href="./Signup_Page.html">
                 <input type="button" value="Sign Up" class="ml-[2rem] text-black rounded-[10px] bg-[#FEE715] p-[8px] font-medium transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70">
             </a>
         </ul>
@@ -39,7 +39,7 @@
                 </div>
                 <div class="items-center">
                     <p class="text-[#FEE715]">Username</p>
-                    <input type="text" name="username" id="username" class="username-form p-[10px] rounded-[10px] bg-white w-[320px] mt-[7px] focus:outline-none focus:ring-1 focus:ring-[#FEE715] max-[420px]:w-[250px]" placeholder="Enter your esername" required>
+                    <input type="text" name="username" id="username" class="username-form p-[10px] rounded-[10px] bg-white w-[320px] mt-[7px] focus:outline-none focus:ring-1 focus:ring-[#FEE715] max-[420px]:w-[250px]" placeholder="Enter your username" required>
                     <br>
                     <p class="mt-[15px] text-[#FEE715]">Password</p>
                     <input type="password" name="password" id="password" class="password-form p-[10px] rounded-[10px] mb-[30px] bg-white w-[320px] mt-[7px] focus:outline-none focus:ring-1 focus:ring-[#FEE715] max-[420px]:w-[250px]" placeholder="Enter your password" required>
@@ -47,7 +47,7 @@
                     <button type="submit" class="bg-[#FEE715] p-[10px] w-[320px] font-bold text-[#101820] rounded-[10px] border-none max-[420px]:w-[250px]">Sign in</button>
                 </div>
                 <div class="text-center mt-[10px] p-[10px]">
-                    <p class="text-gray-600">Don't Have an Account? <a href="" class="text-[#FEE715]">Register Here</a></p>
+                    <p class="text-gray-600">Don't Have an Account? <a href="./Signup_Page.html" class="text-[#FEE715]">Register Here</a></p>
                 </div>
             </div>
         </div>
