--- a/src/Landing_page.html
+++ b/src/Landing_page.html
@@ -35,36 +35,38 @@
         </ul>
     </header>
 
-    <div class="py-[10rem] px-[10rem] max-w-[1200px] m-auto" id="Home">
-        <div class="items-center text-center mt-[1rem]">
-            <h1 class="w-[300px] p-[5px] bg-[#FEE715] rounded-[10px] font-bold relative left-[50%] translate-[-50%]">
-                PROGRAMMING QUIZ
-            </h1>
-        </div>
-        <div class="text-center">
-            <h1 class="text-[4rem] font-bold text-[#101820]">SMAC QUIZZICAL HUB</h1>
-            <p class="font-normal text-[1.3rem] text-sm/6 text-gray-700 px-[3rem]">
-                ICT students of St. Matthew Academy! Here, learning meets fun as you test your skills in HTML, CSS, JavaScript, 
-                and more through exciting quizzes and challenges
-                Join Quizzical Hub and start showcasing your skills.
-            </p>
-            <div class="mt-[2rem] mb-[1rem]">
-                <a href="Login_page.html" class="mr-[1rem] text-white bg-black p-[15px] font-semibold text-[1.20rem] rounded-[10px] items-center transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
-                    <input type="button" value="Get Started" class="">
-                    <i class="fa-solid fa-angle-right text-[1.20rem] ml-5 arrow-transition"></i></a>
-                <a href="#Howitworks" class="border-[2px] p-[15px] font-semibold text-[1.20rem] rounded-[10px] transition-all ease-in-[0.5s] hover:rounded-tr-[20px] hover:rounded-bl-[20px] active:opacity-70">
-                    <input type="button" value="See How It Works" class=""></a>
+    <div class="bg-gray-50" id="Home">
+        <div class="py-[10rem] px-[10rem] max-w-[1200px] m-auto">
+            <div class="items-center text-center mt-[1rem]">
+                <h1 class="w-[300px] p-[5px] bg-[#FEE715] rounded-[10px] font-bold relative left-[50%] translate-[-50%]">
+                    PROGRAMMING QUIZ
+                </h1>
             </div>
-        </div>
+            <div class="text-center">
+                <h1 class="text-[4rem] font-bold bg-gradient-to-r from-black via-gray-700 to-black bg-clip-text text-transparent">SMAC QUIZZICAL HUB</h1>
+                <p class="font-normal text-[1.3rem] text-sm/6 text-gray-600 px-[3rem]">
+                    ICT students of St. Matthew Academy! Here, learning meets fun as you test your skills in HTML, CSS, JavaScript, 
+                    and more through exciting quizzes and challenges
+                    Join Quizzical Hub and start showcasing your skills.
+                </p>
+                <div class="mt-[2rem] mb-[1rem]">
+                    <a href="Login_page.html" class="mr-[1rem] text-white bg-black p-[15px] font-semibold text-[1.20rem] rounded-[10px] items-center transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
+                        <input type="button" value="Get Started" class="">
+                        <i class="fa-solid fa-angle-right text-[1.20rem] ml-5 arrow-transition"></i></a>
+                    <a href="#Howitworks" class="border-[2px] p-[15px] font-semibold text-[1.20rem] rounded-[10px] transition-all ease-in-[0.5s] hover:rounded-tr-[20px] hover:rounded-bl-[20px] active:opacity-70">
+                        <input type="button" value="See How It Works" class=""></a>
+                </div>
+            </div>
 
-        <div class="p-[1rem] text-center px-[5rem] py-[3rem] mt-[2rem]">
-            <i class="fa-brands fa-html5 text-[4rem] text-[#FEE715] transition-all ease-in-[0.5s] hover:text-black"></i>
-            <i class="fa-brands fa-css3 text-[4rem] ml-[8rem] transition-all ease-in-[0.5s] hover:opacity-50"></i>
-            <i class="fa-brands fa-js text-[4rem] ml-[8rem] text-[#FEE715] transition-all ease-in-[0.5s] hover:text-black"></i>
+            <div class="p-[1rem] text-center px-[5rem] py-[3rem] mt-[2rem]">
+                <i class="fa-brands fa-html5 text-[4rem] opacity-50  transition-all ease-in-[0.5s] hover:opacity-100"></i>
+                <i class="fa-brands fa-css3 text-[4rem] opacity-50 ml-[8rem] transition-all ease-in-[0.5s] hover:opacity-100"></i>
+                <i class="fa-brands fa-js text-[4rem] opacity-50 ml-[8rem] transition-all ease-in-[0.5s] hover:opacity-100"></i>
+            </div>
         </div>
     </div>
 
-    <div class="py-[8rem] px-[2rem] border-t-1 border-black max-w-[1200px] m-auto" id="About">
+    <div class="py-[8rem] px-[2rem] max-w-[1200px] m-auto" id="About">
         <div class="text-center items-center px-[10rem]">
             <h1 class="text-black text-[3rem] font-bold items-center text-center">What are we about?</h1>
         <p>
@@ -105,82 +107,84 @@
         </div>
     </div>
 
-    <div class="py-[2rem] px-[2rem] border-t-1 border-black max-w-[1200px] m-auto mt-[5rem]" id="Howitworks">
-        <div class="grid grid-cols-2 gap-[2rem] mt-[4rem] max-w-[1200px] m-auto">
-            <div class="border-gray-100 shadow-lg p-[2rem] rounded-[5px]">
-                <div>
-                    <h4 class="p-[10px] bg-[#FEE715] rounded-[10px] w-[200px] mb-[10px]">How to get Started</h4>
-                    <h1 class="text-[2rem] font-bold">Four simple steps</h1>
-                </div>
-                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
-                    <i class="fa-solid fa-1 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
-                    <div class="items-center ml-[1rem]">
-                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Create Your Account</h4>
-                        <p class="ml-[10px] text-[1rem] text-gray-600">Sign up in less than a minute</p>
+    <div class="bg-gray-50" id="Howitworks">
+        <div  class="py-[2rem] px-[2rem] max-w-[1200px] m-auto mt-[5rem]">
+            <div class="grid grid-cols-2 gap-[2rem] mt-[4rem] max-w-[1200px] m-auto">
+                <div class="border-gray-100 shadow-lg p-[2rem] rounded-[5px]">
+                    <div>
+                        <h4 class="p-[10px] bg-[#FEE715] rounded-[10px] w-[200px] mb-[10px]">How to get Started</h4>
+                        <h1 class="text-[2rem] font-bold">Four simple steps</h1>
+                    </div>
+                    <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
+                        <i class="fa-solid fa-1 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                        <div class="items-center ml-[1rem]">
+                            <h4 class="ml-[10px] text-[1.50rem] font-bold">Create Your Account</h4>
+                            <p class="ml-[10px] text-[1rem] text-gray-600">Sign up in less than a minute</p>
+                        </div>
+                    </div>
+                    <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
+                        <i class="fa-solid fa-2 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                        <div class="items-center ml-[1rem]">
+                            <h4 class="ml-[10px] text-[1.50rem] font-bold">Login Your Account</h4>
+                            <p class="ml-[10px] text-[1rem] text-gray-600">Login in less than a minute</p>
+                        </div>
+                    </div>
+                    <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
+                        <i class="fa-solid fa-3 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                        <div class="items-center ml-[1rem]">
+                            <h4 class="ml-[10px] text-[1.50rem] font-bold">Choose Your Path</h4>
+                            <p class="ml-[10px] text-[1rem] text-gray-600">Fill in the blank or Multiple Choice</p>
+                        </div>
+                    </div>
+                    <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
+                        <i class="fa-solid fa-4 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                        <div class="items-center ml-[1rem]">
+                            <h4 class="ml-[10px] text-[1.50rem] font-bold">Get Started</h4>
+                            <p class="ml-[10px] text-[1rem] text-gray-600">Play Quiz and Enjoy!</p>
+                        </div>
+                    </div>
+                    <div class="p-[10px] mt-[10px]">
+                        <p class="mb-[2rem] text-gray-600">Join Quizzical Hub now and start your quiz!</p>
+                        <a href="./Login_page.html" class="p-[20px] mt-[2rem] bg-black text-white font-semibold rounded-[10px] transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
+                            <input type="button" value="Get Started">
+                            <i class="fa-solid fa-angle-right text-[1rem] ml-2 arrow-transition"></i>
+                        </a>
                     </div>
                 </div>
-                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
-                    <i class="fa-solid fa-2 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
-                    <div class="items-center ml-[1rem]">
-                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Login Your Account</h4>
-                        <p class="ml-[10px] text-[1rem] text-gray-600">Login in less than a minute</p>
-                    </div>
-                </div>
-                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
-                    <i class="fa-solid fa-3 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
-                    <div class="items-center ml-[1rem]">
-                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Choose Your Path</h4>
-                        <p class="ml-[10px] text-[1rem] text-gray-600">Fill in the blank or Multiple Choice</p>
-                    </div>
-                </div>
-                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:shadow-xl bg-gray-50">
-                    <i class="fa-solid fa-4 text-[2rem] p-[1rem] border-[1px] text-white bg-black rounded-[10px]"></i>
-                    <div class="items-center ml-[1rem]">
-                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Get Started</h4>
-                        <p class="ml-[10px] text-[1rem] text-gray-600">Play Quiz and Enjoy!</p>
-                    </div>
-                </div>
-                <div class="p-[10px] mt-[10px]">
-                    <p class="mb-[2rem] text-gray-600">Join Quizzical Hub now and start your quiz!</p>
-                    <a href="./Login_page.html" class="p-[20px] mt-[2rem] bg-black text-white font-semibold rounded-[10px] transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
-                        <input type="button" value="Get Started">
-                        <i class="fa-solid fa-angle-right text-[1rem] ml-2 arrow-transition"></i>
-                    </a>
-                </div>
-            </div>
 
-            <div class="border-gray-100 shadow-lg p-[2rem] rounded-[5px]">
-                <div>
-                    <h4 class="p-[10px] bg-[#FEE715] rounded-[10px] w-[200px] mb-[10px]">Developers Team</h4>
-                    <h1 class="text-[2rem] font-bold">Team</h1>
-                </div>
-                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:bg-gray-50">
-                    <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
-                    <div class="items-center ml-[1rem]">
-                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Christian Daniel Cagas</h4>
-                        <p class="ml-[10px] text-[1rem] text-gray-600">FrontEnd Dev - Overall Design</p>
+                <div class="border-gray-100 shadow-lg p-[2rem] rounded-[5px]">
+                    <div>
+                        <h4 class="p-[10px] bg-[#FEE715] rounded-[10px] w-[200px] mb-[10px]">Developers Team</h4>
+                        <h1 class="text-[2rem] font-bold">Team</h1>
                     </div>
-                </div>
-                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:bg-gray-50">
-                    <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
-                    <div class="items-center ml-[1rem]">
-                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Laurence Singh</h4>
-                        <p class="ml-[10px] text-[1rem] text-gray-600">FrontEnd Dev</p>
+                    <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:bg-gray-50">
+                        <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                        <div class="items-center ml-[1rem]">
+                            <h4 class="ml-[10px] text-[1.50rem] font-bold">Christian Daniel Cagas</h4>
+                            <p class="ml-[10px] text-[1rem] text-gray-600">FrontEnd Dev - Overall Design</p>
+                        </div>
                     </div>
-                </div>
-                <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:bg-gray-50">
-                    <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
-                    <div class="items-center ml-[1rem]">
-                        <h4 class="ml-[10px] text-[1.50rem] font-bold">Haley Colocado</h4>
-                        <p class="ml-[10px] text-[1rem] text-gray-600">FrontEnd Dev</p>
+                    <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:bg-gray-50">
+                        <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                        <div class="items-center ml-[1rem]">
+                            <h4 class="ml-[10px] text-[1.50rem] font-bold">Laurence Singh</h4>
+                            <p class="ml-[10px] text-[1rem] text-gray-600">FrontEnd Dev</p>
+                        </div>
                     </div>
-                </div>
-                <div class="p-[10px] mt-[10px]">
-                    <p class="mb-[2rem] text-gray-600">View Quizzical Hub full team</p>
-                    <a href="#" class="p-[20px] mt-[2rem] bg-black text-white font-semibold rounded-[10px] transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
-                        <input type="button" value="View Team">
-                        <i class="fa-solid fa-angle-right text-[1rem] ml-2 arrow-transition"></i>
-                    </a>
+                    <div class="flex items-center mt-[2rem] transition-all ease-in-[0.5s] hover:bg-gray-50">
+                        <i class="fa-solid fa-user text-[2rem] p-[1.50rem] border-[1px] text-white bg-black rounded-[10px]"></i>
+                        <div class="items-center ml-[1rem]">
+                            <h4 class="ml-[10px] text-[1.50rem] font-bold">Haley Colocado</h4>
+                            <p class="ml-[10px] text-[1rem] text-gray-600">FrontEnd Dev</p>
+                        </div>
+                    </div>
+                    <div class="p-[10px] mt-[10px]">
+                        <p class="mb-[2rem] text-gray-600">View Quizzical Hub full team</p>
+                        <a href="#" class="p-[20px] mt-[2rem] bg-black text-white font-semibold rounded-[10px] transition-all ease-in-[0.5s] hover:bg-[#101820] active:opacity-70">
+                            <input type="button" value="View Team">
+                            <i class="fa-solid fa-angle-right text-[1rem] ml-2 arrow-transition"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
