--- a/src/Signup_Page.html
+++ b/src/Signup_Page.html
@@ -24,7 +24,7 @@
         </ul>
     </header>
     <div class="items-center">
-        <form id="loginForm">
+        <form id="registerForm">
         <div class="grid grid-cols-2 max-lg:grid-cols-1">
             <div class="px-[5rem] py-[5rem] text-center items-center max-lg:hidden">
                 <h4 class="relative top-[250px] font-bold text-[2rem]">&lt;&gt;</h4>
