--- a/src/Home_Page.html
+++ b/src/Home_Page.html
@@ -23,10 +23,14 @@
             </div>
             <ul class="py-[2rem] text-white px-[1rem]">
                 <li class="p-[10px] hover:bg-[#102741] transition-colors duration-300 rounded-[10px]">
+                    <i class="fa-solid fa-chart-line"></i>
+                    <a href="./Home_Page.html" class="ml-[15px]">Dashboard</a>
+                </li>
+                <li class="p-[10px] mt-[5px] hover:bg-[#102741] transition-colors duration-300 rounded-[10px]">
                     <i class="fa-solid fa-gear"></i>
                     <a href="#" class="ml-[15px]">View Account</a>
                 </li>
-                <li class="p-[10px] mt-[10px] hover:bg-[#102741] transition-colors duration-300 rounded-[10px]">
+                <li class="p-[10px] mt-[5px] hover:bg-[#102741] transition-colors duration-300 rounded-[10px]">
                     <i class="fa-solid fa-ranking-star"></i>
                     <a href="#" class="ml-[10px]">Quizzical Points</a>
                 </li>
