Student Points Added

--- a/src/Home_Page.html
+++ b/src/Home_Page.html
@@ -33,7 +33,7 @@
                 </li>
                 <li class="p-[10px] mt-[5px] hover:bg-[#102741] transition-colors duration-300 rounded-[10px]">
                     <i class="fa-solid fa-ranking-star"></i>
-                    <a href="#" class="ml-[10px]">Quizzical Points</a>
+                    <a href="./UserPoints_Page.html" class="ml-[10px]">Quizzical Points</a>
                 </li>
             </ul>
             <div class="py-[2rem] border-t-[1px] border-white items-center px-[20px] text-center">
