--- a/src/Landing_page.html
+++ b/src/Landing_page.html
@@ -110,7 +110,7 @@
     <div class="bg-gray-50" id="Howitworks">
         <div  class="py-[2rem] px-[2rem] max-w-[1200px] m-auto mt-[5rem]">
             <div class="grid grid-cols-2 gap-[2rem] mt-[4rem] max-w-[1200px] m-auto">
-                <div class="border-gray-100 shadow-lg p-[2rem] rounded-[5px]">
+                <div class="border-gray-100 shadow-lg p-[2rem] rounded-[5px] bg-white">
                     <div>
                         <h4 class="p-[10px] bg-[#FEE715] rounded-[10px] w-[200px] mb-[10px]">How to get Started</h4>
                         <h1 class="text-[2rem] font-bold">Four simple steps</h1>
@@ -152,7 +152,7 @@
                     </div>
                 </div>
 
-                <div class="border-gray-100 shadow-lg p-[2rem] rounded-[5px]">
+                <div class="border-gray-100 shadow-lg p-[2rem] rounded-[5px] bg-white">
                     <div>
                         <h4 class="p-[10px] bg-[#FEE715] rounded-[10px] w-[200px] mb-[10px]">Developers Team</h4>
                         <h1 class="text-[2rem] font-bold">Team</h1>
