--- a/src/UserAccount_Page.html
+++ b/src/UserAccount_Page.html
@@ -29,6 +29,10 @@
                     <i class="fa-solid fa-ranking-star"></i>
                     <a href="./UserPoints_Page.html" class="ml-[10px]">Quizzical Points</a>
                 </li>
+                <li class="p-[10px] mt-[5px] hover:bg-[#102741] transition-colors duration-300 rounded-[10px]">
+                    <i class="fa-solid fa-circle-info"></i>
+                    <a href="./QuizInfo_Page.html" class="ml-[10px]">Quiz Information</a>
+                </li>
             </ul>
             <div class="py-[2rem] border-t-[1px] border-white items-center px-[20px] text-center">
                 <button type="button" id="logout-button" class="p-[1rem] bg-[#FEE715] mt-[2rem] w-[200px] text-black font-semibold rounded-[5px] transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</button>
