--- a/src/UserPoints_Page.html
+++ b/src/UserPoints_Page.html
@@ -29,6 +29,10 @@
                     <i class="fa-solid fa-ranking-star"></i>
                     <a href="#" class="ml-[10px]">Quizzical Points</a>
                 </li>
+                <li class="p-[10px] mt-[5px] hover:bg-[#102741] transition-colors duration-300 rounded-[10px]">
+                    <i class="fa-solid fa-circle-info"></i>
+                    <a href="./QuizInfo_Page.html" class="ml-[10px]">Quiz Information</a>
+                </li>
             </ul>
             <div class="py-[2rem] border-t-[1px] border-white items-center px-[20px] text-center">
                 <button type="button" id="logout-button" class="p-[1rem] bg-[#FEE715] mt-[2rem] w-[200px] text-black font-semibold rounded-[5px] transition-all ease-in-[0.5s] hover:bg-[#ccb800] active:opacity-70"><i class="fa-solid fa-arrow-right-from-bracket"></i> Logout</button>
@@ -90,6 +94,14 @@
                             <h5 id="total-points" class="text-[1.50rem] max-[1310px]:text-[1.20rem] font-bold"></h5>
                         </div>
                     </div>
+                </div>
+
+                <div class="py-[10px] mt-[1rem] border-gray-200 border shadow-sm rounded-[5px] bg-white hover:shadow-md transition-all ease-in-[0.5s] border-l-[10px] border-l-[#FEE715]">
+                    <div class="flex items-center p-[10px]">
+                        <i class="fa-solid fa-circle-info text-[1.50rem]"></i>
+                        <h1 class="ml-[10px] text-[1.50rem] font-semibold">Quizzical Information</h1>
+                    </div>
+                    <p class="px-[10px]">Please read the quiz information before you start</p>
                 </div>
             </div>
         </div>
